# qoz_main

./: .gitignore  CMakeLists.txt
include/SZ3/: version.hpp
test/: pyqoz.py  qoz.cpp
tools/pyqoz/: pyqoz.py
tools/qozc/: CMakeLists.txt
tools/qozc/include/: qozc.h
tools/qozc/src/: qozc.cpp
